# live_lightcode

./: README.md  manage.py  pyproject.toml  req.txt
authentication/: admin.py  models.py  renderers.py  serializers.py  urls.py  views.py
light_code_crm/: asgi.py  settings.py  urls.py  wsgi.py
webapp/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
webapp/migrations/: 0001_initial.py
webapp/templatetags/: staticfiles.py
